  the total number of created constraints when disaggregating a quadratic constraint
- added parameter constraints/quadratic/disaggrmergemethod
- removed parameter "separating/feastolfac"
- removed parameters "constraints/{abspower,bivariate,quadratic,nonlinear}/mincutefficacysepa",
  "constraints/{abspower,bivariate,quadratic,nonlinear}/mincutefficacyenfofac", and constraints/soc/minefficacy

interface:
- new interface methods to create and use bandit algorithms implemented as SCIP core plugins --
  algorithms that can be used from all user plugins
- new public methods SCIPvariableGraphBreadthFirst() and SCIPvariableGraph{Create,Free}() to
  perform breadth-first search on the variable constraint graph used by the GINS and LNS heuristics
- removed clique component index from SCIP_Var struct and the public interface method SCIPvarGetCliqueComponentIdx
- new interface methods SCIPcreateRandom, SCIPfreeRandom that replace SCIPrandomCreate and SCIPrandomFree
  in the public SCIP API.
- new interface method SCIPsetRandomSeed to (re)set a random number generator seed
- added method SCIPsetProbingLPState() to install given LP state and/or norms at the current probing node
- added functions SCIPbranchcandGetLPMaxPrio() and SCIPbranchcandGetExternMaxPrio() get the maximal branching priority of given
  branching candidates; also added SCIPbranchcandGetNPrioLPCands() to access the number of LP candidates with this priority.
- added methods SCIPupdateSolIntegralityViolation(), SCIPupdateSolBoundViolation(), SCIPupdateSolLPRowViolation(),
  SCIPupdateSolConsViolation() and SCIPupdateSolLPConsViolation() for updating numerical solution violations, as well as
  SCIPactivateSolViolationUpdates() and SCIPdeactivateSolViolationUpdates() for activating/deactivating violation updates globally
- added method SCIPcliqueGetIndex() which returns the unique identifier for the given clique
- added method SCIPgetNCliquesCreated() which returns the number of cliques created so far